# flatpak-status

./: .eslintrc.yml  .flake8  .gitignore  .gitmodules  .travis.yml  Dockerfile  Pipfile  README.md  config-example.yaml  package.json  pyproject.toml  setup.py
.github/workflows/: ci.yml
flatpak_status/: __init__.py  bodhi_query.py  cli.py  db.py  distgit.py  fedora.toml  koji_query.py  messaging.py  models.py  release_info.py  update.py
flatpak_status/migrations/: alembic.ini  env.py
flatpak_status/migrations/versions/: 03dcd7b05d63_add_extra_fields_to_updates_and_builds.py  723d9e77cb7b_add_koji_tags.py  8e089a7d484f_add_type_to_bodhiupdate.py  9c3fbfc5f9d2_add_modulemd_column_to_modulebuild.py  dbd98058e57f_mark_columns_not_null.py
frontend/: Dockerfile  frontend.conf
tests/: bodhi.py  conftest.py  distgit_mock.py  fedora_monitor_mock.py  koji.py  test_bodhi_query.py  test_cli.py  test_distgit.py  test_koji_query.py  test_models.py  test_update.py
tools/: build-frontend.sh  build-redis.sh  create-test-data.py  run-redis.sh  test-podman.sh  test.sh
utils/: create-test-data.py  run-frontend.sh  test-docker.sh  test-podman.sh  test.sh  update-test-data-cache.sh  update-test-data.sh
web/: index.html  status.css  status.js
